feat: writing the readme
