# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /api/v1
 definitions:
-  v1.Resolve:
+  github_com_bancodobrasil_featws-resolver-bridge_payloads_v1.Resolve:
     properties:
       context:
         additionalProperties: true
@@ -77,7 +77,7 @@ paths:
         name: parameters
         required: true
         schema:
-          $ref: '#/definitions/v1.Resolve'
+          $ref: '#/definitions/github_com_bancodobrasil_featws-resolver-bridge_payloads_v1.Resolve'
       produces:
       - application/json
       responses:
